# chatbridge

./: .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  facade.py  main.py  pyproject.toml  requirements.txt  schema.py
chatbridge/: main.py  schema.py
docker/: docker-compose.yml
tests/: test-cohere-stream.sh  test-cohere.sh  test-grok-stream.sh  test-grok.sh  test-meta-stream.sh  test-meta.sh
