[project]
name = "oci-generative-ai"
version = "0.1.0"
description = "OpenAI API compatible adaptor for OCI Generative APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "oci>=2.154.0",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
]
