[project]
name = "chatbridge"
dynamic = ["version"]
description = "OpenAI API compatible endpoint for the OCI Generative AI Inference APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "oci>=2.154.0",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/scross01/chatbridge"
Issues = "https://github.com/scross01/chatbridge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "chatbridge/__version__.py"
